# dalevision-edge-agent

./: LICENSE  README.md  pyproject.toml
edge-agent/: .env  .env.example  01_setup.bat  02_run.bat  README_PILOT.md  install_edge_agent.ps1  monitor_edge_status.ps1  run_edge_agent.ps1
edge-agent/config/: agent.yaml
edge-agent/config/rois/: cam01.yaml  cam02.yaml  cam03.yaml
edge-agent/data/: edge_queue.db  edge_queue.db-shm  edge_queue.db-wal
edge-agent/scripts/: make_favicon.py
edge-agent/src/agent/: cli.py  lifecycle.py  main.py  runtime_state.py  settings.py  setup_server.py
edge-agent/src/camera/: rtsp.py
edge-agent/src/events/: builder.py  receipts.py
edge-agent/src/queue/: __init__.py  sqlite_queue.py
edge-agent/src/storage/: sqlite_queue.py
edge-agent/src/transport/: api_client.py
edge-agent/src/vision/: aggregations.py  detector.py  rules.py
edge-agent/tests/: test_api_client_headers.py
release/: README.txt  run.bat  run_once.bat
release/win/: .env.example  README.txt  run.bat
scripts/: release_windows.ps1  run_windows.bat
src/: run_agent.py
src/dalevision_edge_agent/: cameras.py  env.py  heartbeat.py  main.py
tests/: test_cameras.py  test_heartbeat.py
